--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^2.6.0"
+    "vue-js-modal": "^1.3.31"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
