--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "nuxt": "^2.4.0",
     "vue-js-modal": "^1.3.31"
   },
