--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^5.2.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.11",
     "nuxt": "^2.4.0",
     "vue-js-modal": "^1.3.31"
   },
