--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "less-loader": "^5.0.0",
     "lodash": "^4.17.11",
     "nuxt": "^2.4.0",
-    "vue-js-modal": "^1.3.31"
+    "vue-js-modal": "^1.3.31",
+    "vuetify": "^1.5.14"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
