--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "less-loader": "^5.0.0",
     "lodash": "^4.17.11",
     "nuxt": "^2.4.0",
+    "nuxt-storage": "^1.2.1",
     "vue-google-login": "^2.0.0",
     "vue-js-modal": "^1.3.31",
     "vuetify": "^1.5.14"
